style: Renaming ATSBot with ASSBot

--- a/src/ATSBot/ASSBot.csproj
+++ b/src/ATSBot/ASSBot.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <RootNamespace>ATSBot</RootNamespace>
+        <RootNamespace>ASSBot</RootNamespace>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>10.0</LangVersion>
